修复了三个编辑角色工作台复用所导致的问题